scss/_mobile.scss
@media (max-width: 700px) {
  .hide-sm {
    display: none;
  }

  .container {
    margin-top: 8rem
  }

  // text styles
  .x-large {
    font-size: 4rem
  }

  .large {
    font-size: 2rem;
  }

  .lead {
    font-size: 1rem;
  }

  // nav bar
  .navbar {
    display: block;
    text-align: center;

    ul {
      text-align: center;
      justify-content: center;
    }

    h1 {
      margin-bottom: 1rem;
    }
  }

  .dash-buttons a {
    display: block;
    width: 100%;
    margin-bottom: 0.2rem
  }

  // businesss
  .business {
    grid-template-columns: 1fr;
    text-align: center;

    ul {
      display: none;
    }
  }

  .business-about {
    .skills {
      flex-direction: column;
    }
  }

  // landing

  .promo,
  .product {
    display: grid;
    grid-template-columns: 1fr;
    height: 60%;

    .promo-image,
    .product-image {
      width: auto;
      max-width: 100%;
      justify-self: center;
    }

    a,
    button {
      padding: 0.3rem 0.4rem
    }
  }

  span {
    font-size: .5rem;
    width: fit-content;
    display: inline-block;
    margin: .25rem;
    vertical-align: super;
  }


  .working-hours {
    grid-template-columns: 1fr;
    width: 100%
  }

  .testimonials {
    overflow: auto;
    flex-direction: column;

  }

  .search-bar {
    flex-direction: column;
    align-items: center;
    text-align: center
  }

  .stats {
    width: 80%;
    margin-left: 10%;
    padding-bottom: 10%
  }

  // Profile

  .enlarged {
    display: block;
    max-height: 13rem;
    margin: 0.5rem;
  }

  .services {
    flex-direction: column
  }

  .product {
    grid-template-columns: 1fr;

    &-img {
      display: flex;
      justify-content: center;

      &-image {
        width: auto;
        max-width: 100%;
        justify-self: center;
      }
    }
  }



  // create promo
  .duration-container {
    height: 2rem;
  }

  .create-promo {
    display: block;
  }

  // search
  .search-form {
    display: flex;
    flex-direction: column;
    width: 80%;

    select,
    input {
      margin-bottom: 1rem;
      height: 2rem;

    }
  }

  .me {
    grid-template-columns: 1fr;
    width: 100%;

    img {
      justify-self: center
    }
  }

  .modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: .5rem;
    left: 10%;
    top: 10%;
    width: 80%;
    height: 80%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.6);
    border: 2px solid $primary-color;

    .product {
      grid-template-columns: 1fr;

      &-img {
        display: flex;
        justify-content: center;

        &-image {
          width: auto;
          max-width: 100%;
          justify-self: center;
        }
      }
    }
  }

  // scrollbar
  &::-webkit-scrollbar {
    width: 0.5rem;
  }

  &::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px #333;
    border-radius: 0.5rem;
  }

  /* Handle */
  &::-webkit-scrollbar-thumb {
    background: $primary-color;
    border-radius: 0.5rem;
  }

  /* Handle on hover */
  &::-webkit-scrollbar-thumb:hover {
    background: darken($primary-color, 10%);
  }

  /* The Close Button */
  .close {
    color: #fff;
    font-size: 0.75rem;
    float: right;
    margin-right: 2rem;
    margin-bottom: 2rem;
  }

  .close:hover,
  .close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
  }

  .business-about {
    text-align: center;

    .services {
      display: flex;
      justify-content: center;
      align-items: center;
      text-align: center
    }
  }
}

